[gd_scene load_steps=34 format=2]

[ext_resource path="res://asset/player/img/playerdownright.png" type="Texture" id=1]
[ext_resource path="res://asset/player/img/playerDown.png" type="Texture" id=2]
[ext_resource path="res://asset/player/img/playerleft.png" type="Texture" id=3]
[ext_resource path="res://asset/player/img/playerleft2.png" type="Texture" id=4]
[ext_resource path="res://asset/player/img/playerdownright2.png" type="Texture" id=5]
[ext_resource path="res://asset/player/img/playerright.png" type="Texture" id=6]
[ext_resource path="res://asset/player/img/playerDown2.png" type="Texture" id=7]
[ext_resource path="res://asset/player/img/playerdownleft.png" type="Texture" id=8]
[ext_resource path="res://asset/player/img/playerup.png" type="Texture" id=9]
[ext_resource path="res://asset/player/img/playerupleft.png" type="Texture" id=10]
[ext_resource path="res://asset/player/img/playerup2.png" type="Texture" id=11]
[ext_resource path="res://asset/player/img/playerupright2.png" type="Texture" id=12]
[ext_resource path="res://asset/player/img/playerright2.png" type="Texture" id=13]
[ext_resource path="res://asset/player/img/playerupleftc.png" type="Texture" id=14]
[ext_resource path="res://asset/player/img/playerdownleft2.png" type="Texture" id=15]
[ext_resource path="res://asset/player/img/playerDownc.png" type="Texture" id=16]
[ext_resource path="res://asset/player/img/playerupc.png" type="Texture" id=17]
[ext_resource path="res://asset/player/img/playerdownleftc.png" type="Texture" id=18]
[ext_resource path="res://asset/player/img/playerupright.png" type="Texture" id=19]
[ext_resource path="res://asset/player/img/playerupleft2.png" type="Texture" id=20]
[ext_resource path="res://asset/player/img/playerdownrightc.png" type="Texture" id=21]
[ext_resource path="res://asset/player/img/playeruprightc.png" type="Texture" id=22]
[ext_resource path="res://asset/player/img/playerleftc.png" type="Texture" id=23]
[ext_resource path="res://asset/player/img/playerrightc.png" type="Texture" id=24]
[ext_resource path="res://asset/player/Player.gd" type="Script" id=25]
[ext_resource path="res://tongue test/TonguePiece.gd" type="Script" id=26]

[sub_resource type="CylinderShape" id=17]
height = 0.01

[sub_resource type="CylinderShape" id=22]
height = 2.23457

[sub_resource type="BoxShape" id=19]
extents = Vector3( 0.418989, 0.580764, 0.636816 )

[sub_resource type="CylinderShape" id=23]
height = 0.153787

[sub_resource type="SpriteFrames" id=14]
animations = [ {
"frames": [ ExtResource( 6 ), ExtResource( 13 ) ],
"loop": true,
"name": "right",
"speed": 0.0
}, {
"frames": [ ExtResource( 3 ), ExtResource( 4 ) ],
"loop": true,
"name": "left",
"speed": 0.0
}, {
"frames": [ ExtResource( 9 ), ExtResource( 11 ) ],
"loop": true,
"name": "up",
"speed": 0.0
}, {
"frames": [ ExtResource( 24 ) ],
"loop": true,
"name": "right_c",
"speed": 5.0
}, {
"frames": [ ExtResource( 13 ) ],
"loop": true,
"name": "right_jump",
"speed": 5.0
}, {
"frames": [ ExtResource( 11 ) ],
"loop": true,
"name": "up_jump",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "left_jump",
"speed": 5.0
}, {
"frames": [ ExtResource( 1 ), ExtResource( 5 ) ],
"loop": true,
"name": "downright",
"speed": 0.0
}, {
"frames": [ ExtResource( 15 ) ],
"loop": true,
"name": "downleft_jump",
"speed": 5.0
}, {
"frames": [ ExtResource( 17 ) ],
"loop": true,
"name": "up_c",
"speed": 5.0
}, {
"frames": [ ExtResource( 5 ) ],
"loop": true,
"name": "downright_jump",
"speed": 5.0
}, {
"frames": [ ExtResource( 18 ) ],
"loop": true,
"name": "downleft_c",
"speed": 5.0
}, {
"frames": [ ExtResource( 10 ), ExtResource( 20 ) ],
"loop": true,
"name": "upleft",
"speed": 0.0
}, {
"frames": [ ExtResource( 23 ) ],
"loop": true,
"name": "left_c",
"speed": 5.0
}, {
"frames": [ ExtResource( 22 ) ],
"loop": true,
"name": "upright_c",
"speed": 5.0
}, {
"frames": [ ExtResource( 7 ) ],
"loop": true,
"name": "down_jump",
"speed": 5.0
}, {
"frames": [ ExtResource( 20 ) ],
"loop": true,
"name": "upleft_jump",
"speed": 5.0
}, {
"frames": [ ExtResource( 14 ) ],
"loop": true,
"name": "upleft_c",
"speed": 5.0
}, {
"frames": [ ExtResource( 12 ) ],
"loop": true,
"name": "upright_jump",
"speed": 5.0
}, {
"frames": [ ExtResource( 19 ), ExtResource( 12 ) ],
"loop": true,
"name": "upright",
"speed": 0.0
}, {
"frames": [ ExtResource( 21 ) ],
"loop": true,
"name": "downright_c",
"speed": 5.0
}, {
"frames": [ ExtResource( 16 ) ],
"loop": true,
"name": "down_c",
"speed": 5.0
}, {
"frames": [ ExtResource( 2 ), ExtResource( 7 ) ],
"loop": true,
"name": "down",
"speed": 0.0
}, {
"frames": [ ExtResource( 8 ), ExtResource( 15 ) ],
"loop": true,
"name": "downleft",
"speed": 0.0
} ]

[sub_resource type="SphereMesh" id=20]

[sub_resource type="PrismMesh" id=21]

[node name="Player" type="Spatial"]
script = ExtResource( 25 )

[node name="TonguePiece2" type="Spatial" parent="."]
script = ExtResource( 26 )

[node name="pieces" type="Spatial" parent="TonguePiece2"]

[node name="PlayerBody" type="KinematicBody" parent="."]

[node name="bonk" type="Area" parent="PlayerBody"]

[node name="CollisionShape3" type="CollisionShape" parent="PlayerBody/bonk"]
transform = Transform( 0.576, 0, 0, 0, 1.152, 0, 0, 0, 0.576, 0, 0.148044, 0 )
shape = SubResource( 17 )

[node name="CollisionShape" type="CollisionShape" parent="PlayerBody"]
transform = Transform( 0.576, 0, 0, 0, 0.576, 0, 0, 0, 0.576, 0, -0.505204, 0 )
shape = SubResource( 22 )

[node name="interact" type="Area" parent="PlayerBody/CollisionShape"]
transform = Transform( 10, 0, 0, 0, -4.37114e-07, 10, 0, -10, -4.37114e-07, 0, -2.9681e-08, -0.679022 )

[node name="CollisionShape" type="CollisionShape" parent="PlayerBody/CollisionShape/interact"]
transform = Transform( 0.1, 0, 0, 0, -4.37114e-09, -0.1, 0, 0.1, -4.37114e-09, -0.139, -0.0578028, 0 )
shape = SubResource( 19 )

[node name="wallSlide" type="Area" parent="PlayerBody/CollisionShape"]

[node name="CollisionShape2" type="CollisionShape" parent="PlayerBody/CollisionShape/wallSlide"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.12934, 0 )
shape = SubResource( 23 )

[node name="PlayerIMG" type="Spatial" parent="PlayerBody"]

[node name="MeshInstance" type="AnimatedSprite3D" parent="PlayerBody/PlayerIMG"]
transform = Transform( 3.456, 0, 0, 0, 3.456, 0, 0, 0, 3.456, 0, -0.124, 0 )
visible = false
billboard = 2
frames = SubResource( 14 )
animation = "upleft_c"

[node name="MeshInstance2" type="MeshInstance" parent="PlayerBody/PlayerIMG"]
transform = Transform( 0.567, 0, 0, 0, 0.647, 0, 0, 0, 0.326, 0, -0.515, 0 )
mesh = SubResource( 20 )
material/0 = null

[node name="MeshInstance3" type="MeshInstance" parent="PlayerBody/PlayerIMG"]
transform = Transform( -2.47844e-08, -0.777, 0, 0.567, -3.39637e-08, 0, 0, 0, 0.326, -0.726, -0.429, 0 )
mesh = SubResource( 21 )
material/0 = null

[connection signal="body_entered" from="PlayerBody/bonk" to="." method="_on_bonk_body_entered"]
[connection signal="body_entered" from="PlayerBody/CollisionShape/interact" to="." method="_on_interact_body_entered"]
[connection signal="body_exited" from="PlayerBody/CollisionShape/interact" to="." method="_on_interact_body_exited"]
[connection signal="body_entered" from="PlayerBody/CollisionShape/wallSlide" to="." method="_on_wallSlide_body_entered"]
[connection signal="body_exited" from="PlayerBody/CollisionShape/wallSlide" to="." method="_on_wallSlide_body_exited"]
